@@ -46,22 +46,12 @@ class Theme_Blvd_Compat_WPML {
 		add_action( 'wp_enqueue_scripts', array($this, 'assets'), 15 );
 		add_filter( 'themeblvd_framework_stylesheets', array($this, 'add_style') );
 
-		if ( has_filter('wp_nav_menu_items', array($icl_language_switcher, 'wp_nav_menu_items_filter') ) ) {
-			remove_filter( 'wp_nav_menu_items', array($icl_language_switcher, 'wp_nav_menu_items_filter') );
-			add_filter( 'wp_nav_menu_items', array($this, 'menu_switcher'), 10, 2);
-		}
-
 		if ( apply_filters('themeblvd_wpml_has_switcher', true) ) {
-
-			// Option to for user to select if they want to display
-			// theme's default switcher (usually in header)
-			add_action( 'icl_language_switcher_options', array($this, 'switcher_options') );
-			add_action( 'icl_save_settings', array($this, 'save_switcher_options') );
 
 			// Remove WPML default lang switcher and create our own.
 			// remove_all_actions('icl_language_selector');
-			remove_action( 'icl_language_selector', array( $sitepress, 'language_selector' ) );
-			add_action('icl_language_selector', array( $this, 'language_selector' ) );
+			remove_all_actions( 'icl_language_selector' );
+			add_action( 'icl_language_selector', array( $this, 'language_selector' ) );
 
 			// Set theme tag themeblvd_do_lang_selector() to true, if necessary
 			add_filter( 'themeblvd_do_lang_selector', array($this, 'do_lang_selector') );
@@ -81,6 +71,7 @@ class Theme_Blvd_Compat_WPML {
 		$deps = $handler->get_framework_deps();
 
 		wp_enqueue_style( 'themeblvd-wpml', esc_url( TB_FRAMEWORK_URI . '/compat/wpml/wpml.css' ), $deps, TB_FRAMEWORK_VERSION );
+
 	}
 
 	/**
@@ -91,196 +82,10 @@ class Theme_Blvd_Compat_WPML {
 	 * @since 2.5.0
 	 */
 	public function add_style( $deps ) {
+
 		$deps[] = 'wpml';
+
 		return $deps;
-	}
-
-	/**
-	 * If user has selected for WPML to insert lang switcher into
-	 * main menu, let's make sure it will fit into our framework
-	 * menu styling.
-	 *
-	 * This function was copied from WPML and following changes were made:
-	 * 1. Add class "menu-item-has-children" to top level <li>
-	 * 2. Add sub indicator to top level <li>
-	 * 3. Add "menu-btn" class to all links
-	 * 4. Add "non-mega-sub-menu" class to submenu
-	 *
-	 * @since 2.5.0
-	 * @see SitePressLanguageSwitcher::wp_nav_menu_items_filter()
-	 */
-	public function menu_switcher($items, $args){
-
-        global $sitepress_settings, $sitepress;
-
-		$current_language = $sitepress->get_current_language();
-		$default_language = $sitepress->get_default_language();
-
-        // menu can be passed as integer or object
-        if( isset($args->menu->term_id) ) {
-			$args->menu = $args->menu->term_id;
-		}
-
-		$abs_menu_id = icl_object_id( $args->menu, 'nav_menu', false, $default_language );
-
-        if ( $abs_menu_id == $sitepress_settings['menu_for_ls'] ) {
-
-            $languages = $sitepress->get_ls_languages();
-
-            $items .= '<li class="menu-item menu-item-language menu-item-language-current menu-item-has-children level-1">'; // ThemeBlvd add "level-1" class
-
-            if(isset($args->before)){
-                $items .= $args->before;
-            }
-
-            $items .= '<a href="#" onclick="return false" class="menu-btn">';
-
-            if( isset($args->link_before) ) {
-                $items .= $args->link_before;
-            }
-
-			$language_name = '';
-
-			if ( $sitepress_settings['icl_lso_native_lang'] ) {
-				$language_name .= $languages[ $current_language ][ 'native_name' ];
-			}
-
-			if ( $sitepress_settings['icl_lso_display_lang'] && $sitepress_settings[ 'icl_lso_native_lang' ] ) {
-				$language_name .= ' (';
-			}
-
-			if ( $sitepress_settings['icl_lso_display_lang'] ) {
-				$language_name .= $languages[ $current_language ][ 'translated_name' ];
-			}
-
-			if ( $sitepress_settings['icl_lso_display_lang'] && $sitepress_settings[ 'icl_lso_native_lang' ] ) {
-				$language_name .= ')';
-			}
-
-			$alt_title_lang = esc_attr($language_name);
-
-            if ( $sitepress_settings['icl_lso_flags'] ) {
-				$items .= '<img class="iclflag" src="' . $languages[ $current_language ][ 'country_flag_url' ] . '" width="18" height="12" alt="' . $alt_title_lang . '" title="' . esc_attr( $language_name ) . '" />';
-			}
-
-			$items .= $language_name;
-
-			if ( ! empty($languages) && count($languages) > 1 ) {
-				$items .= apply_filters('themeblvd_menu_sub_indicator', '<i class="sf-sub-indicator fa fa-caret-down"></i>', 'down');
-			}
-
-			if ( isset($args->link_after) ) {
-                $items .= $args->link_after;
-            }
-
-            $items .= '</a>';
-
-            if( isset($args->after) ) {
-                $items .= $args->after;
-            }
-
-            unset($languages[ $current_language ]);
-
-			$sub_items = false;
-			$menu_is_vertical = !isset($sitepress_settings['icl_lang_sel_orientation']) || $sitepress_settings['icl_lang_sel_orientation'] == 'vertical';
-			$menu_is_vertical = true; // ThemeBlvd override above line, always vertical
-
-            if( ! empty($languages) ) {
-                foreach( $languages as $lang ){
-
-					$sub_items .= '<li class="menu-item menu-item-language menu-item-language-current level-2">'; // ThemeBlvd add "level-2" class
-                    $sub_items .= '<a href="'.$lang['url'].'" class="menu-btn">';
-
-					$language_name = '';
-
-					if ( $sitepress_settings[ 'icl_lso_native_lang' ] ) {
-						$language_name .= $lang[ 'native_name' ];
-					}
-
-					if ( $sitepress_settings[ 'icl_lso_display_lang' ] && $sitepress_settings[ 'icl_lso_native_lang' ] ) {
-						$language_name .= ' (';
-					}
-
-					if ( $sitepress_settings[ 'icl_lso_display_lang' ] ) {
-						$language_name .= $lang[ 'translated_name' ];
-					}
-
-					if ( $sitepress_settings[ 'icl_lso_display_lang' ] && $sitepress_settings[ 'icl_lso_native_lang' ] ) {
-						$language_name .= ')';
-					}
-					$alt_title_lang = esc_attr($language_name);
-
-                    if( $sitepress_settings['icl_lso_flags'] ){
-                        $sub_items .= '<img class="iclflag" src="'.$lang['country_flag_url'].'" width="18" height="12" alt="'.$alt_title_lang.'" title="' . $alt_title_lang . '" />';
-                    }
-
-					$sub_items .= $language_name;
-
-                    $sub_items .= '</a>';
-                    $sub_items .= '</li>';
-
-                }
-				if ( $sub_items && $menu_is_vertical ) {
-					$sub_items = '<ul class="sub-menu submenu-languages non-mega-sub-menu">' . $sub_items . '</ul>';
-				}
-            }
-			if ( $menu_is_vertical ) {
-				$items .= $sub_items;
-            	$items .= '</li>';
-			} else {
-				$items .= '</li>';
-				$items .= $sub_items;
-			}
-
-        }
-
-        return $items;
-    }
-
-    /**
-	 * Add option to display theme's language switcher.
-	 *
-	 * @since 2.5.0
-	 */
-	public function switcher_options() {
-		$theme = wp_get_theme( get_template() );
-		$current = get_option('tb_wpml_show_lang_switcher', '1');
-		?>
-		<div class="wpml-section-content-inner">
-			<h4><?php printf(esc_html__('%s by %s', 'jumpstart'), $theme->get('Name'), '<a href="http://themeblvd.com" target="_blank">Theme Blvd</a>' ); ?></h4>
-			<label for="tb_wpml_show_lang_switcher">
-				<input type="checkbox" id="tb_wpml_show_lang_switcher" name="tb_wpml_show_lang_switcher" value="1" <?php checked('1', $current); ?> />
-				<?php printf(esc_html__('Display %s\'s default language switcher.', 'jumpstart'), $theme->get('Name')); ?>
-			</label>
-		</div>
-		<?php
-	}
-
-	/**
-	 * Save option to display theme's language switcher.
-	 *
-	 * @since 2.5.0
-	 */
-	public function save_switcher_options() {
-
-		if ( isset($_POST['icl_ajx_action']) && $_POST['icl_ajx_action'] == 'icl_save_language_switcher_options' ) {
-
-			// Save user's selection
-			if ( empty( $_POST['tb_wpml_show_lang_switcher'] ) ) {
-				$val = '0';
-			} else {
-				$val = '1';
-			}
-
-			update_option('tb_wpml_show_lang_switcher', $val);
-
-		} else if ( ! empty($_GET['restore_ls_settings']) ) {
-
-			// If user resets option, set to true
-			update_option('tb_wpml_show_lang_switcher', '1');
-
-		}
-
 	}
 
 	/**
@@ -345,7 +150,9 @@ class Theme_Blvd_Compat_WPML {
 	 * @since 2.5.0
 	 */
 	public function language_selector() {
+
 		echo $this->get_language_selector();
+
 	}
 
 	/**
@@ -355,8 +162,10 @@ class Theme_Blvd_Compat_WPML {
 	 */
 	public function do_lang_selector() {
 
-		if ( get_option('tb_wpml_show_lang_switcher', '1') ) {
+		if ( 'no' !== themeblvd_get_option( 'wpml_show_lang_switcher' ) ) {
+
 			return true;
+
 		}
 
 		return false;
